# bark

./: .dockerignore  .gitignore  .goreleaser.yaml  .opendoc-build-id  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  index.html  install.sh  opendoc.go  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.rhiza/: history  template.yml
blog/: index.html
cmd/opendoc/: commands.go  main.go
console/: index.html
demo-site/: bark.yml  reality.md
demo-site/content/: about.md  index.md
docs/: bark.yml  opendoc.yml  settings.json
docs/content/: blog.md  calendar.md  console.md  getting-started.md  health.md  index.md  physics.md  workspace.md
getting-started/: index.html
health/: index.html
internal/chat/: adapter.go  anthropic.go  openai.go  session.go  tools.go
internal/core/: appconfig.go  builder.go  cliutil.go  config.go  content.go  publish.go  renderer.go  scaffold.go  secrets.go
internal/pty/: pty.go  pty_windows.go
internal/server/: build.go  files.go  integrations.go  server.go  settings.go  sse.go  watcher.go
internal/tui/: model.go  screens.go  styles.go
internal/web/: server.go  session.go
physics/: index.html
public/: index.html
public/css/: workbench.css
public/js/: app.js  chat.js
src/bark/: __init__.py  builder.py  cli.py  config.py  content.py  renderer.py  scaffold.py  server.py
static/js/: main.js
tests/: conftest.py  test_builder.py  test_cli.py  test_config.py  test_content.py  test_renderer.py
workspace/: index.html
(+41 files in other folders)
